--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
   "name": "todo-list",
-  "version": "0.0.0",
+  "version": "1.0.0RELEASE",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "node api/server.js",
+    "server:dev": "nodemon api/js/server.js"
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^10.0.0",
     "@angular/animations": "~11.2.7",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
     "@angular/forms": "~11.2.7",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "redux": "^4.0.1",
     "rxjs": "~6.6.0",
+    "tassign": "^1.0.0",
     "tslib": "^2.0.0",
+    "winston": "^3.3.3",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
@@ -37,7 +47,9 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "nodemon": "^2.0.7",
     "protractor": "~7.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
