--- a/back-end/api/package.json
+++ b/back-end/api/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
     "server:dev": "nodemon index"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "joi": "^17.4.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
